--- a/transition/mymovie/css/style.css
+++ b/transition/mymovie/css/style.css
@@ -1,6 +1,13 @@
 html,
 body {
   width: 100%;
+  user-select: none;
+}
+.flex {
+  display: flex;
+}
+.flex1 {
+  flex: 1;
 }
 .nav {
   height: 1.067rem;
@@ -116,7 +123,148 @@ body {
   font-size: 17px;
   margin: 0.08rem 0;
 }
-.page .movie-header .movie-container .movie-content .mover-ename {
+.page .movie-header .movie-container .movie-content .movie-ename {
   font-size: 12px;
   margin-bottom: 0.3rem;
+}
+.page .movie-header .movie-container .movie-content .movie-score {
+  font-size: 12px;
+  margin-bottom: 0.3rem;
+}
+.page .movie-header .movie-container .movie-content .movie-score .rating .img {
+  width: 0.48rem;
+  height: 0.4rem;
+  margin-right: 2px;
+}
+.page .movie-header .movie-container .movie-content .movie-score .rating .rating-score {
+  font-size: 0.48rem;
+  color: #ffc600;
+}
+.page .movie-header .movie-container .movie-content .movie-detail {
+  font-size: 12px;
+  margin-bottom: 0.16rem;
+  opacity: 0.7;
+}
+.page .movie-header .movie-container .movie-content .movie-detail div,
+.page .movie-header .movie-container .movie-content .movie-detail p {
+  margin-bottom: 0.14rem;
+}
+.page .movie-header .movie-container .movie-content .movie-detail div {
+  display: inline-block;
+}
+.page .movie-header .movie .operating {
+  margin-top: 0.5rem;
+}
+.page .movie-header .movie .operating div {
+  border: 1px solid rgba(255,255,255,0.4);
+  background-color: rgba(255,255,255,0.4);
+  font-size: 14px;
+  color: #fff;
+  position: relative;
+  z-index: 2;
+  text-align: center;
+  padding: 0.25rem 0;
+  border-radius: 4px;
+}
+.page .movie-header .movie .operating div img {
+  vertical-align: middle;
+}
+.page .movie-header .movie .operating div span {
+  vertical-align: middle;
+}
+.page .movie-header .movie .operating .movie-watch {
+  margin-right: 0.3rem;
+}
+.page .movie-header .movie .operating .movie-watch img {
+  width: 14px;
+}
+.page .movie-header .movie .operating .movie-mark img {
+  width: 18px;
+}
+.page .section-seprate {
+  padding: 0.4rem;
+  margin-bottom: 0.3rem;
+  border-top: 1px solid #e5e5e5;
+}
+.page .section-seprate .text-expander__content.close {
+  overflow: hidden;
+  min-height: 65px;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  transition: all 0.5s ease;
+}
+.page .section-seprate .text-expander__button {
+  text-align: center;
+  height: 0.7em;
+}
+.page .section-seprate .text-expander__button .icon-chevron_down {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border: 1px solid #000;
+  border-width: 0 1px 1px 0;
+  transform: rotate(45deg);
+  box-sizing: border-box;
+  transition: transform 0.5s ease;
+}
+.page .section-seprate .text-expander__button .icon-chevron_down.up {
+  transform: rotate(-135deg);
+  transition: transform 0.5s ease;
+}
+.page .section-seprate .section-title {
+  font-weight: bold;
+  font-size: 16px;
+}
+.page .section-seprate .movie-celebrities {
+  width: 100%;
+  padding: 0.3rem 0.3rem 0.1rem 0;
+  overflow-x: auto;
+  white-space: nowrap;
+  box-sizing: border-box;
+}
+.page .section-seprate .movie-celebrities li {
+  text-align: center;
+  display: inline-block;
+  padding: 0.04rem;
+}
+.page .section-seprate .movie-celebrities li .link {
+  color: #000;
+}
+.page .section-seprate .movie-celebrities li .link .movie-celebrities__pic {
+  width: 1.7334rem;
+  height: 2.4rem;
+  margin: 0.05rem;
+}
+.page .section-seprate .movie-celebrities li .link .movie-celebrities__pic img {
+  width: 100%;
+}
+.page .section-seprate .movie-celebrities li .link span {
+  display: block;
+  font-size: 0.2rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.page .section-seprate .movie-celebrities li .link .movie-celebrities-roles {
+  color: #999;
+}
+.page .movie-booking .weui-flex {
+  text-align: center;
+}
+.page .movie-booking .weui-flex .placeholder span {
+  font-size: 24px;
+  color: #d96a3d;
+}
+.page .movie-booking .weui-flex .placeholder p {
+  color: #bababa;
+  margin-top: 0.1rem;
+}
+#toast {
+  display: none;
+}
+.active {
+  display: block !important;
 }
