--- a/transition/mymovie/css/style.styl
+++ b/transition/mymovie/css/style.styl
@@ -1,8 +1,16 @@
 $hdbg_color = #e54847
 $font_color_block = #fff
+$db-color = #e5e5e5
 
 html,body
     width 100%
+    user-select none
+
+.flex
+    display flex
+
+.flex1
+    flex 1
 
 .nav
     height 1.067rem
@@ -41,8 +49,9 @@ html,body
     font: 14px/1.5 Arial,Helvetica,sans-serif
     section 
         background #fff
-        border-bottom 1px solid #e5e5e5
+        border-bottom 1px solid $db-color
     .movie-header
+
         padding 0
         background #f8f8f8
         border-bottom none
@@ -103,6 +112,128 @@ html,body
                     .movie-name
                         font-size 17px
                         margin 0.08rem 0
-                    .mover-ename
+                    .movie-ename
                         font-size 12px
                         margin-bottom 0.3rem
+                    .movie-score
+                        font-size 12px
+                        margin-bottom 0.3rem
+                        
+                        .rating
+
+                            .img
+                                width 0.48rem
+                                height 0.4rem
+                                margin-right 2px
+
+                            .rating-score
+                                font-size 0.48rem
+                                color #ffc600
+                    .movie-detail
+                        font-size 12px
+                        margin-bottom 0.16rem
+                        
+                        opacity 0.7
+                        div,p
+                            margin-bottom 0.14rem
+                        div
+                            display inline-block
+            .operating
+                margin-top 0.5rem
+                div
+                    border 1px solid rgba(255,255,255,0.4)
+                    background-color rgba(255,255,255,0.4)
+                    font-size 14px
+                    color #ffffff
+                    position relative
+                    z-index 2
+                    text-align center
+                    padding 0.25rem 0
+                    border-radius: 4px
+                    img 
+                        vertical-align middle
+                    span 
+                        vertical-align middle
+                .movie-watch
+                    margin-right 0.3rem
+                    img 
+                        width 14px
+                .movie-mark
+                    img 
+                        width 18px
+    .section-seprate
+        padding 0.4rem
+        margin-bottom 0.3rem
+        border-top 1px solid $db-color
+        .text-expander
+            &__content.close
+                overflow hidden
+                min-height 65px
+                display -webkit-box
+                text-overflow: ellipsis
+                word-break break-all
+                -webkit-box-orient: vertical
+                -webkit-line-clamp 3
+                transition: all .5s ease
+            &__button
+                text-align center
+                height 0.7em
+                .icon-chevron_down
+                    display inline-block
+                    width 10px
+                    height 10px
+                    border 1px solid #000
+                    border-width 0 1px 1px 0
+                    transform rotate(45deg)
+                    box-sizing border-box
+                    transition transform .5s ease
+                
+                .icon-chevron_down.up
+                    transform rotate(-135deg)
+                    transition transform .5s ease
+    .section-seprate
+        .section-title
+            font-weight bold
+            font-size 16px
+        .movie-celebrities
+            width 100%
+            padding 0.3rem 0.3rem 0.1rem 0
+            overflow-x auto
+            white-space nowrap
+            box-sizing border-box
+            li
+                text-align center
+                display inline-block
+                padding 0.04rem
+                .link
+                    color #000
+                    .movie-celebrities__pic
+                        width 1.7334rem
+                        height 2.4rem
+                        margin 0.05rem
+                        img 
+                            width 100%
+                    span 
+                        display block
+                        font-size .2rem
+                        text-overflow ellipsis
+                        overflow hidden
+                        white-space: nowrap
+                    .movie-celebrities-roles
+                        color #999
+    .movie-booking
+        .weui-flex
+            text-align center
+            .placeholder
+                span
+                    font-size 24px
+                    color #d96a3d
+                p
+                    color #bababa
+                    margin-top 0.1rem
+
+
+#toast
+    display none
+.active
+    display block !important
